@@ -1,3 +1,4 @@
-Compile the lexer for the occs parser:
+X Compile the lexer for the occs parser:
     Find origin of the line "FILE* yyout = stdout" in the output of LeX applied to parser.lex
 Make occs compile without termlib or curses library
+    - Classify the missing functions causing the linker error
